--- a/css/custom.css
+++ b/css/custom.css
@@ -19,3 +19,15 @@
 .copy { font-size: 12px;}
 .pointer{ cursor: pointer;}
 .separadorLogo {color: #fff; font-size: 16px; padding: 0px 5px;}
+.video-responsive {
+    position: relative;
+    margin-bottom: 20px;
+    padding-top: 56.25%;
+}
+.video-responsive iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
